[tool.poetry]
name = "blaise-daybatch-functions"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.26.0"
python-dotenv = "^1.1.1"
requests-mock = "^1.9.3"
notifications-python-client = "^10.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"
mock = "^5.2.0"
behave = "^1.2.6"
coverage = "^7.10.6"
pytest-cov = "^6.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
